--- a/src/styles/tokens.css
+++ b/src/styles/tokens.css
@@ -1,13 +1,19 @@
 :root {
-	--primary-100: #f3d6ff;
-	--primary-200: #e4adff;
-	--primary-300: #d084ff;
-	--primary-400: #bd66ff;
-	--primary-500: #9d33ff;
-	--primary-600: #7a25db;
-	--primary-700: #5b19b7;
-	--primary-800: #401093;
-	--primary-900: #2c097a;
+	--primary-100: #d6e4ff;
+	--primary-200: #adc8ff;
+	--primary-300: #84a9ff;
+	--primary-400: #6690ff;
+	--primary-500: #3366ff;
+	--primary-600: #254edb;
+	--primary-700: #1939b7;
+	--primary-800: #102693;
+	--primary-900: #091a7a;
+	--primary-transparent-100: rgba(51, 102, 255, 0.08);
+	--primary-transparent-200: rgba(51, 102, 255, 0.16);
+	--primary-transparent-300: rgba(51, 102, 255, 0.24);
+	--primary-transparent-400: rgba(51, 102, 255, 0.32);
+	--primary-transparent-500: rgba(51, 102, 255, 0.4);
+	--primary-transparent-600: rgba(51, 102, 255, 0.48);
 	--success-100: #eefbd1;
 	--success-200: #daf8a5;
 	--success-300: #bbec76;
@@ -35,4 +41,6 @@
 	--danger-700: #b71e10;
 	--danger-800: #930c0a;
 	--danger-900: #7a060d;
+	--shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
+		rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 }
